movieDtos ordering fixed